--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,10 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.875rem;
   min-width: 320px;
   min-height: 100vh;
 }
