--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+.App {
+  display: flex;
+
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1 1 80%;
+  border: 1px solid #29e9e9;
 }
 
 @media (prefers-reduced-motion: no-preference) {
